<resources>
    <string name="app_name">attendR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="attendance_required">Attendance Required</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="start_time">Start Time</string>
    <string name="finish_time">Finish Time</string>
    <string name="sign_in_time">Sign In Time</string>
    <string name="attendees">Attendees</string>
    <string name="submit">Submit</string>
    <string name="pick">pick</string>
    <string name="group_name">Group Name</string>
    <string name="attending">Attending</string>
    <string name="organised">Organised</string>
    <string name="past">Past</string>
    <string name="ongoing">Ongoing</string>
    <string name="future">Future</string>
    <string name="account_made">Account made</string>
    <string name="error_making_account">Error making account</string>
    <string name="select_from_group_names">Select from groups</string>
    <string name="created_event">Created event: </string>
    <string name="successful_login">Log In Successful</string>
    <string name="failure_login">Log In Error</string>
    <string name="welcome_user">Welcome, </string>
    <string name="data_updated">Data updated</string>
    <string name="network_error">Network Error</string>
    <string name="not_connected_to_internet">Not connected to internet to perform action</string>
    <string name="is_attendee">Is attendee</string>
    <string name="event_deleted">Event Deleted</string>
    <string name="event_delete_error">Error deleting event</string>
    <string name="verified_group">Verified group</string>
    <string name="group_updated">Group updated</string>
    <string name="create">Create</string>
    <string name="group_deleted">Group deleted</string>
    <string name="group_delete_error">Error deleting group</string>
    <string name="alert">Alert</string>
    <string name="event_sign_in">Sign In</string>
    <string name="token_expired">Token expired</string>
    <string name="sign_in_again">You must sign in again to perform network functions</string>
    <string name="ok">OK</string>
    <string name="user_already_attending">User is already attending</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="user_removed_from_event">User removed from event</string>
    <string name="error_removing_user_from_event">Error removing user from event</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="create_group">Create Group</string>
    <string name="update_group">Update Group</string>
    <string name="create_event">Create Event</string>
    <string name="attending_events">Attending Events</string>
    <string name="organised_events">Organised Events</string>
    <string name="groups">Groups</string>
    <string name="removed_user_from_attending">Removed user from attending</string>
    <string name="error_removing_user_from_attending">User not in attending</string>
    <string name="options">Options</string>
    <string name="upcoming">Upcoming</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="error_creating_group">Error creating group</string>
    <string name="error_updating_group">Error updating group</string>
    <string name="group_exists_with_same_name">Group already exists with same name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view_user_stats">View User Stats</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="view_location_on_map">View location on map</string>
    <string name="add_calendar_event_alert">Add Event to Calendar</string>
    <string name="create_calendar_event_message">Do you want to put this event in your calendar?</string>
    <string name="error">Error</string>
    <string name="update_event">Update Event</string>
    <string-array name="user_options">
        <item>View User Attendance</item>
        <item>Remove From Event</item>
        <item>Manually Sign In</item>
        <item>Remove From Attending</item>
    </string-array>
    <string-array name="user_options_attending">
        <item>View User Attendance</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_event_viewer">NewEventViewerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_attending_events_viewer">AttendingEventsViewerActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="organiser">Organiser</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="sign_in">Sign In</string>
    <string name="percentage">Percentage</string>
    <string name="attended">Attended</string>
    <string name="register">Register</string>
    <string name="sign_in_time_display">Sign In:</string>
    <string name="finish_time_display">Finish:</string>
    <string name="start_time_display">Start:</string>
    <string name="choose_time">Please choose a time</string>
    <string name="choose_start_time">Choose Start Time</string>
    <string name="choose_finish_time">Choose Finish Time</string>
    <string name="choose_sign_in_time">Choose Sign In Time</string>
</resources>