<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/attending_events"
                android:icon="@drawable/icon_event_attending"
                android:title="@string/attending_events" />
            <item
                android:id="@+id/organised_events"
                android:icon="@drawable/icon_event_organise"
                android:title="@string/organised_events" />
            <item
                android:id="@+id/groups"
                android:icon="@drawable/icon_group_black"
                android:title="@string/groups" />

        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/icon_logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>