<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/swipe_container"
android:layout_width="match_parent"
android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            tools:context="com.example.user.attendr.activities.ViewEventActivity">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="160dp">

                    <TextView
                        android:id="@+id/tvEventName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/event_name"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvEventName"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/location"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tvOrganiser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvLocation"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/organiser"
                        android:textAlignment="center"

                        />

                    <TextView
                        android:id="@+id/tvStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvOrganiser"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/start_time"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tvSignInTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/tvEventName"
                        android:layout_alignRight="@+id/tvEventName"
                        android:layout_below="@+id/tvStartTime"
                        android:layout_marginTop="15dp"
                        android:text="@string/sign_in_time"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tvFinishTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/tvStartTime"
                        android:layout_alignStart="@+id/tvStartTime"
                        android:layout_below="@+id/tvSignInTime"
                        android:layout_marginTop="15dp"
                        android:text="@string/finish_time"
                        android:textAlignment="center" />

                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginStart="13dp"
                        android:text="@string/update" />

                    <Button
                        android:id="@+id/btnSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="19dp"
                        android:text="@string/sign_in" />

                    <TextView
                        android:id="@+id/tvPercentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/btnSignIn"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="11dp"
                        android:text="@string/percentage"
                        android:textAlignment="center"
                        tools:text="@string/percentage" />

                    <TextView
                        android:id="@+id/tvAttended"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/tvOrganiser"
                        android:layout_alignTop="@+id/btnSignIn"
                        android:text="@string/attended"
                        android:textAlignment="center" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="54dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>



</android.support.v4.widget.SwipeRefreshLayout>

